--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -4,10 +4,21 @@
   box-sizing: border-box;
 }
 
+.container {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
 .card {
   width: 25%;
-  background-color: red;
+  background-color: rgb(83,83,83);
   border-radius: 5px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.card:hover {
+  background-color: rgb(190, 190, 190);
 }
 
 .content-card {
@@ -16,10 +27,34 @@
   align-items: flex-start;
 }
 
+.card .content-card .img-card {
+  position: relative;
+}
+
 .card .content-card .img-card img {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
+  /* transition: all 1s ease-in; */
 }
+
+.card .content-card:hover .img-card img {
+  /* transform: scale(1.1); */
+}
+
+.card .content-card .img-card i {
+  display: block;
+  position: absolute;
+  bottom: 15%;
+  right: 15%;
+  font-size: 50px;
+  color: green;
+  /* transition: all 3s ease; */
+}
+
+/* .card .content-card:hover .img-card i {
+  display: block;
+  transform: translateY(0);
+} */
 
 .card .content-card .text-card {
   width: 100%;
