--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -12,13 +12,13 @@
 
 .card {
   width: 25%;
-  background-color: rgb(83,83,83);
+  border: 1px solid #000000;
   border-radius: 5px;
   font-family: 'Open Sans', sans-serif;
 }
 
 .card:hover {
-  background-color: rgb(190, 190, 190);
+  background-color: #000000;
 }
 
 .content-card {
@@ -60,4 +60,24 @@
   width: 100%;
   padding: 10px;
   padding-bottom: 30px;
+}
+
+.card .content-card .text-card h2 {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+.card .content-card .text-card h3 {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.card .content-card .text-card span {
+  font-weight: 300;
+  font-size: 13px;
+}
+
+.card:hover .text-card {
+  color: white;
 }
