--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -8,17 +8,19 @@
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  padding: 20px;
 }
 
 .card {
   width: 25%;
-  border: 1px solid #000000;
+  border: 1px solid #181818;
   border-radius: 5px;
   font-family: 'Open Sans', sans-serif;
+  margin: 5px;
 }
 
 .card:hover {
-  background-color: #000000;
+  background-color: #181818;
 }
 
 .content-card {
@@ -60,6 +62,7 @@
   width: 100%;
   padding: 10px;
   padding-bottom: 30px;
+  color: #181818;
 }
 
 .card .content-card .text-card h2 {
